# HuboApplication

./: .gitignore  .gitmodules  .nojekyll  CMakeLists.txt  Doxyfile  README.md  _color_tracker_8cpp.html  _color_tracker_8cpp__incl.map  _color_tracker_8cpp__incl.md5  _color_tracker_8h.html  _color_tracker_8h__dep__incl.map  _color_tracker_8h__dep__incl.md5  _color_tracker_8h__incl.map  _color_tracker_8h__incl.md5  _color_tracker_8h_source.html  _color_tracker_params_8h.html  _color_tracker_params_8h__dep__incl.map  _color_tracker_params_8h__dep__incl.md5  _color_tracker_params_8h__incl.md5  _color_tracker_params_8h_source.html  _fastrak_8cpp.html  _fastrak_8cpp__incl.map  _fastrak_8cpp__incl.md5  _fastrak_8h.html  _fastrak_8h__dep__incl.map  _fastrak_8h__dep__incl.md5  _fastrak_8h__incl.map  _fastrak_8h__incl.md5  _fastrak_8h_source.html  _hubo_joints_8h.html  _hubo_joints_8h_source.html  _ring_buffer_8h.html  _ring_buffer_8h_source.html  _test_fastrak_8cpp.html  _test_fastrak_8cpp__incl.map  _test_fastrak_8cpp__incl.md5  _test_fastrak_8h.html  _test_fastrak_8h__dep__incl.map  _test_fastrak_8h__dep__incl.md5  _test_fastrak_8h__incl.map  (+112 more)
find/: FindEigen.cmake  FindLibfreenect.cmake  FindOpenNI.cmake
include/: Collision_Checker.h  ColorTracker.h  ColorTrackerParams.h  Fastrak.h  HuboJoints.h  HuboKin.h  HuboManipulator.h  HuboStateROS.h  RingBuffer.h  ft_flag_t.h  hubo_joint_names.h  manipulation_instruction_t.h  tf_eigen.h
include/HuboApplication/: ColorTracker.h  HuboManipulator.h  HuboStateROS.h  ModelMatcher.h  RingBuffer.h  hubo_joint_names.h  manipulation_instruction_t.h
include/hubo_vision/: ColorTracker.h  Fastrak.h  HuboManipulator.h  HuboStateROS.h  ModelMatcher.h  SampleModelGenerator.h
launch/: embedded_hubo.launch  fastrak.launch  grasping.launch  hubo.vcg  observe.launch  ros_cv.launch  ros_hubo.launch  target.urdf
resources/: Settings.xml  setup_ach_forwarding.bash
resources/models/: partial_cylinder.pcd
scripts/: setup_ach_forwarding.bash  setup_fastrak.bash
search/: all_61.js  all_62.js  all_63.js  all_65.js  all_66.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_63.js  classes_66.js  classes_73.js  classes_74.js  defines_62.js  enums_66.js  enums_68.js  enumvalues_61.js  enumvalues_62.js  enumvalues_63.js  enumvalues_66.js  enumvalues_6a.js  enumvalues_6c.js  enumvalues_72.js  enumvalues_73.js  enumvalues_76.js  enumvalues_77.js  files_63.js  files_66.js  files_68.js  files_72.js  files_74.js  functions_61.js  functions_62.js  (+15 more)
src/HuboApplication/srv/: _SetHuboArmPose.py  _SetHuboJointPositions.py  _SetHuboObjectPose.py  __init__.py
src/exe/: calibrate_camera_movements.cpp  cvTest.cpp  cvTest2.cpp  featureTracker.cpp  hubo_mimic.cpp  recognise_table_objects.cpp  remove_body_from_image.cpp  ros_activity_coordinator.cpp  ros_cv.cpp  ros_fastrak.cpp  ros_hubo_interface.cpp
src/libraries/: Collision_Checker.cpp  ColorTracker.cpp  Fastrak.cpp  HuboKin.cpp  HuboManipulator.cpp  HuboStateROS.cpp  ModelMatcher.cpp  SampleModelGenerator.cpp  tf_eigen.cpp
src/tests/: test_fastrak.cpp  test_sample_fastrak_publisher.cpp  test_units.cpp
src/tests/system/: testIKSystem.cpp  test_fastrak.cpp  test_ros_hubo_interface.cpp  test_sample_fastrak_publisher.cpp
src/tests/unit/: TestFastrak.cpp  TestFastrak.h  TestIK.cpp  TestModelMatcher.cpp  testIK.cpp
src/tests/unit/resources/: ism_partial_wolf.pcd
srv/: SetHuboArmPose.srv  SetHuboJointPositions.srv  SetHuboObjectPose.srv
