<package>
	<name>HuboApplication</name>
	<version>0.4.0</version>
	<description brief="HuboApplication">
		Provides Hubo's vision capabilities.
	</description>
	<maintainer email="arprice@gatech.edu">Andrew Price</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>std_msgs</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>cv_bridge</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>tf</build_depend>
	<build_depend>eigen_conversions</build_depend>
	<build_depend>tabletop_object_detector</build_depend>
	
	<run_depend>std_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>cv_bridge</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>tf</run_depend>
	<run_depend>eigen_conversions</run_depend>
	<run_depend>tabletop_object_detector</run_depend>
</package>


